# FPV-LiPo-Thermal-Runaway-Guard

./: README.md  memo.md
c/: CMakeLists.txt  main.c
c/compare/: compare_a_ecm_order.c  compare_b_soc_method.c  compare_c_soh_method.c  compare_d_runaway_alert.c  compare_e_power_control.c
c/data/: B0006_discharge.csv
c/include/: arrhenius.h  controller.h  ecm.h  ecm2.h  ecm2_params.h  ecm_params.h  ekf.h  ocv_table.h
c/src/: arrhenius.c  controller.c  ecm.c  ecm2.c  ekf.c
python/plots/: plot_comparisons.py
python/preprocess/: capacity.py  ecm2_params.py  ecm_params.py  main.py  ocv_table.py
python/preprocess/output/capacity/: B0006_capacity.csv  B0007_capacity.csv  B0018_capacity.csv
python/preprocess/output/discharge/: B0007_discharge.csv  B0018_discharge.csv
simulator/: CMakeLists.txt  run.sh
simulator/include/: acro.h  battery_sim.h  params.h  physics.h  trajectory.h
simulator/src/: acro.c  battery_sim.c  main.c  physics.c  trajectory.c
simulator/visualize/: animate.py  plot.py
